--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,14 +18,14 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href='/'>
                         <img src="/img/header-logo.png" alt="Bosa Noga">
                     </a>
 
                     <div class="collapase navbar-collapse" id="navbarMain">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="/">Главная</a>
+                            <li class="nav-item active">
+                                <a class="nav-link" href='/'>Главная</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/catalog.html">Каталог</a>
@@ -65,55 +65,28 @@
                     <h2 class="banner-header">К весне готовы!</h2>
                 </div>
 
-                <section class="catalog-item">
-                    <h2 class="text-center">Босоножки 'MYER'</h2>
-                    <div class="row">
-                        <div class="col-5">
-                            <img src="https://cdn-images.farfetch-contents.com/12/93/06/52/12930652_13567910_1000.jpg"
-                                class="img-fluid" alt="">
-                        </div>
-                        <div class="col-7">
-                            <table class="table table-bordered">
-                                <tbody>
-                                    <tr>
-                                        <td>Артикул</td>
-                                        <td>1000046</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Производитель</td>
-                                        <td>PAUL ANDREW</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Цвет</td>
-                                        <td>Чёрный</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Материалы</td>
-                                        <td>Кожа</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Сезон</td>
-                                        <td>Лето</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Повод</td>
-                                        <td>Прогулка</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div class="text-center">
-                                <p>Размеры в наличии: <span class="catalog-item-size selected">18 US</span> <span class="catalog-item-size">20 US</span></p>
-                                <p>Количество: <span class="btn-group btn-group-sm pl-2">
-                                        <button class="btn btn-secondary">-</button>
-                                        <span class="btn btn-outline-primary">1</span>
-                                        <button class="btn btn-secondary">+</button>
-                                    </span>
-                                </p>
-                            </div>
-                            <button class="btn btn-danger btn-block btn-lg">В корзину</button>
-                        </div>
+                <section class="top-sales">
+                    <h2 class="text-center">Хиты продаж!</h2>
+
+                    <div class="preloader">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </section>
+
+                <section class="catalog">
+                    <h2 class="text-center">Каталог</h2>
+
+                    <div class="preloader">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </section>
+
             </div>
         </div>
     </main>
