--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -18,14 +18,14 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href='/'>
                         <img src="/img/header-logo.png" alt="Bosa Noga">
                     </a>
 
                     <div class="collapase navbar-collapse" id="navbarMain">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Главная</a>
+                                <a class="nav-link" href='/'>Главная</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/catalog.html">Каталог</a>
@@ -65,11 +65,57 @@
                     <h2 class="banner-header">К весне готовы!</h2>
                 </div>
 
-                <section class="top-sales">
-                    <h2 class="text-center">Страница не найдена</h2>
-                    <p>
-                        Извините, такая страница не найдена!
-                    </p>
+                <section class="cart">
+                    <h2 class="text-center">Корзина</h2>
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Название</th>
+                                <th scope="col">Размер</th>
+                                <th scope="col">Кол-во</th>
+                                <th scope="col">Стоимость</th>
+                                <th scope="col">Итого</th>
+                                <th scope="col">Действия</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><a href="/products/1.html">Босоножки 'MYER'</a></td>
+                                <td>18 US</td>
+                                <td>1</td>
+                                <td>34 000 руб.</td>
+                                <td>34 000 руб.</td>
+                                <td><button class="btn btn-outline-danger btn-sm">Удалить</button></td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">Общая стоимость</td>
+                                <td>34 000 руб.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+                <section class="order">
+                    <h2 class="text-center">Оформить заказ</h2>
+                    <div class="card" style="max-width: 30rem; margin: 0 auto;">
+                        <form class="card-body">
+                            <div class="form-group">
+                                <label for="phone">Телефон</label>
+                                <input class="form-control" id="phone" placeholder="Ваш телефон">
+                            </div>
+                            <div class="form-group">
+                                <label for="address">Адрес доставки</label>
+                                <input class="form-control" id="address" placeholder="Адрес доставки">
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="agreement">
+                                <label class="form-check-label" for="agreement">Согласен с правилами доставки</label>
+                            </div>
+                            <button type="submit" class="btn btn-outline-secondary">Оформить</button>
+                        </form>
+
+                    </div>
                 </section>
             </div>
         </div>
