--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -18,16 +18,16 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href='/'>
                         <img src="/img/header-logo.png" alt="Bosa Noga">
                     </a>
 
                     <div class="collapase navbar-collapse" id="navbarMain">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Главная</a>
+                                <a class="nav-link" href='/'>Главная</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="/catalog.html">Каталог</a>
                             </li>
                             <li class="nav-item">
@@ -65,58 +65,104 @@
                     <h2 class="banner-header">К весне готовы!</h2>
                 </div>
 
-                <section class="cart">
-                    <h2 class="text-center">Корзина</h2>
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Название</th>
-                                <th scope="col">Размер</th>
-                                <th scope="col">Кол-во</th>
-                                <th scope="col">Стоимость</th>
-                                <th scope="col">Итого</th>
-                                <th scope="col">Действия</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td><a href="/products/1.html">Босоножки 'MYER'</a></td>
-                                <td>18 US</td>
-                                <td>1</td>
-                                <td>34 000 руб.</td>
-                                <td>34 000 руб.</td>
-                                <td><button class="btn btn-outline-danger btn-sm">Удалить</button></td>
-                            </tr>
-                            <tr>
-                                <td colspan="5" class="text-right">Общая стоимость</td>
-                                <td>34 000 руб.</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-                <section class="order">
-                    <h2 class="text-center">Оформить заказ</h2>
-                    <div class="card" style="max-width: 30rem; margin: 0 auto;">
-                        <form class="card-body">
-                            <div class="form-group">
-                                <label for="phone">Телефон</label>
-                                <input class="form-control" id="phone" placeholder="Ваш телефон">
-                            </div>
-                            <div class="form-group">
-                                <label for="address">Адрес доставки</label>
-                                <input class="form-control" id="address" placeholder="Адрес доставки">
-                            </div>
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="agreement">
-                                <label class="form-check-label" for="agreement">Согласен с правилами доставки</label>
-                            </div>
-                            <button type="submit" class="btn btn-outline-secondary">Оформить</button>
-                        </form>
+                <section class="catalog">
+                    <h2 class="text-center">Каталог</h2>
 
+                    <form class="catalog-search-form form-inline">
+                        <input class="form-control" placeholder="Поиск">
+                    </form>
+
+                    <ul class="catalog-categories nav justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Все</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Женская обувь</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Мужская обувь</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Обувь унисекс</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Детская обувь</a>
+                        </li>
+                    </ul>
+
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card catalog-item-card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/93/06/52/12930652_13567910_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Босоножки 'MYER'">
+                                <div class="card-body">
+                                    <p class="card-text">Босоножки 'MYER'</p>
+                                    <p class="card-text">34 000 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card catalog-item-card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/94/66/72/12946672_13518465_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Босоножки 'Keira'">
+                                <div class="card-body">
+                                    <p class="card-text">Босоножки 'Keira'</p>
+                                    <p class="card-text">7 600 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card catalog-item-card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/99/04/32/12990432_13705715_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Супергеройские кеды">
+                                <div class="card-body">
+                                    <p class="card-text">Супергеройские кеды</p>
+                                    <p class="card-text">1 400 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card catalog-item-card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/93/06/52/12930652_13567910_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Босоножки 'MYER'">
+                                <div class="card-body">
+                                    <p class="card-text">Босоножки 'MYER'</p>
+                                    <p class="card-text">34 000 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card catalog-item-card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/94/66/72/12946672_13518465_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Босоножки 'Keira'">
+                                <div class="card-body">
+                                    <p class="card-text">Босоножки 'Keira'</p>
+                                    <p class="card-text">7 600 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card catalog-item-card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/99/04/32/12990432_13705715_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Супергеройские кеды">
+                                <div class="card-body">
+                                    <p class="card-text">Супергеройские кеды</p>
+                                    <p class="card-text">1 400 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-outline-primary">Загрузить ещё</button>
                     </div>
                 </section>
+
             </div>
         </div>
     </main>
