--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -18,14 +18,14 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href='/'>
                         <img src="/img/header-logo.png" alt="Bosa Noga">
                     </a>
 
                     <div class="collapase navbar-collapse" id="navbarMain">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Главная</a>
+                                <a class="nav-link" href='/'>Главная</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/catalog.html">Каталог</a>
