--- a/src/html/index-loaded.html
+++ b/src/html/index-loaded.html
@@ -18,16 +18,16 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href='/'>
                         <img src="/img/header-logo.png" alt="Bosa Noga">
                     </a>
 
                     <div class="collapase navbar-collapse" id="navbarMain">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="/">Главная</a>
-                            </li>
                             <li class="nav-item active">
+                                <a class="nav-link" href='/'>Главная</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="/catalog.html">Каталог</a>
                             </li>
                             <li class="nav-item">
@@ -65,12 +65,48 @@
                     <h2 class="banner-header">К весне готовы!</h2>
                 </div>
 
+                <section class="top-sales">
+                    <h2 class="text-center">Хиты продаж!</h2>
+
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/93/06/52/12930652_13567910_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Босоножки 'MYER'">
+                                <div class="card-body">
+                                    <p class="card-text">Босоножки 'MYER'</p>
+                                    <p class="card-text">34 000 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/94/66/72/12946672_13518465_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Босоножки 'Keira'">
+                                <div class="card-body">
+                                    <p class="card-text">Босоножки 'Keira'</p>
+                                    <p class="card-text">7 600 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <img src="https://cdn-images.farfetch-contents.com/12/99/04/32/12990432_13705715_1000.jpg"
+                                    class="card-img-top img-fluid" alt="Супергеройские кеды">
+                                <div class="card-body">
+                                    <p class="card-text">Супергеройские кеды</p>
+                                    <p class="card-text">1 400 руб.</p>
+                                    <a href="/products/1.html" class="btn btn-outline-primary">Заказать</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
                 <section class="catalog">
                     <h2 class="text-center">Каталог</h2>
-
-                    <form class="catalog-search-form form-inline">
-                        <input class="form-control" placeholder="Поиск">
-                    </form>
 
                     <ul class="catalog-categories nav justify-content-center">
                         <li class="nav-item">
