--- a/src/products/1.html
+++ b/src/products/1.html
@@ -3,14 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="ie=edge">
     <title>Bosa Noga</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+          rel="stylesheet"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+          crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="/css/style.css">
 </head>
 
 <body>
@@ -18,36 +25,46 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                    <a class="navbar-brand" href='/'>
-                        <img src="/img/header-logo.png" alt="Bosa Noga">
+                    <a class="navbar-brand"
+                       href="/">
+                        <img src="/img/header-logo.png"
+                             alt="Bosa Noga">
                     </a>
 
-                    <div class="collapase navbar-collapse" id="navbarMain">
+                    <div class="collapase navbar-collapse"
+                         id="navbarMain">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href='/'>Главная</a>
+                                <a class="nav-link"
+                                   href="/">Главная</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/catalog.html">Каталог</a>
+                                <a class="nav-link"
+                                   href="/catalog.html">Каталог</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/about.html">О магазине</a>
+                                <a class="nav-link"
+                                   href="/about.html">О магазине</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/contacts.html">Контакты</a>
+                                <a class="nav-link"
+                                   href="/contacts.html">Контакты</a>
                             </li>
                         </ul>
                         <div>
                             <div class="header-controls-pics">
-                                <div data-id="search-expander" class="header-controls-pic header-controls-search"></div>
-                                <!-- Do programmatic navigation on click to /cart.html -->
+                                <div data-id="search-expander"
+                                     class="header-controls-pic header-controls-search"></div>
+	                            <!-- Do programmatic navigation on click to /cart.html -->
                                 <div class="header-controls-pic header-controls-cart">
                                     <div class="header-controls-cart-full">1</div>
                                     <div class="header-controls-cart-menu"></div>
                                 </div>
                             </div>
-                            <form data-id="search-form" class="header-controls-search-form form-inline invisible">
-                                <input class="form-control" placeholder="Поиск">
+                            <form data-id="search-form"
+                                  class="header-controls-search-form form-inline invisible">
+                                <input class="form-control"
+                                       placeholder="Поиск">
                             </form>
                         </div>
                     </div>
@@ -61,7 +78,9 @@
         <div class="row">
             <div class="col">
                 <div class="banner">
-                    <img src="/img/banner.jpg" class="img-fluid" alt="К весне готовы!">
+                    <img src="/img/banner.jpg"
+                         class="img-fluid"
+                         alt="К весне готовы!">
                     <h2 class="banner-header">К весне готовы!</h2>
                 </div>
 
@@ -70,7 +89,8 @@
                     <div class="row">
                         <div class="col-5">
                             <img src="https://cdn-images.farfetch-contents.com/12/93/06/52/12930652_13567910_1000.jpg"
-                                class="img-fluid" alt="">
+                                 class="img-fluid"
+                                 alt="">
                         </div>
                         <div class="col-7">
                             <table class="table table-bordered">
@@ -124,16 +144,19 @@
                 <section>
                     <h5>Информация</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item"><a href="/about.html" class="nav-link">О магазине</a></li>
-                        <li class="nav-item"><a href="/catalog.html" class="nav-link">Каталог</a></li>
-                        <li class="nav-item"><a href="/contacts.html" class="nav-link">Контакты</a></li>
+                        <li class="nav-item"><a href="/about.html"
+                                                class="nav-link">О магазине</a></li>
+                        <li class="nav-item"><a href="/catalog.html"
+                                                class="nav-link">Каталог</a></li>
+                        <li class="nav-item"><a href="/contacts.html"
+                                                class="nav-link">Контакты</a></li>
                     </ul>
                 </section>
             </div>
             <div class="col">
                 <section>
-                    <h5>Принимаем к оплате:</h3>
-                        <div class="footer-pay">
+                    <h5>Принимаем к оплате:</h5>
+	                    <div class="footer-pay">
                             <div class="footer-pay-systems footer-pay-systems-paypal"></div>
                             <div class="footer-pay-systems footer-pay-systems-master-card"></div>
                             <div class="footer-pay-systems footer-pay-systems-visa"></div>
@@ -149,10 +172,12 @@
             </div>
             <div class="col text-right">
                 <section class="footer-contacts">
-                    <h5>Контакты:</h3>
-                        <a class="footer-contacts-phone" href="tel:+7-495-790-35-03">+7 495 79 03 5 03</a>
+                    <h5>Контакты:</h5>
+	                    <a class="footer-contacts-phone"
+	                       href="tel:+7-495-790-35-03">+7 495 79 03 5 03</a>
                         <span class="footer-contacts-working-hours">Ежедневно: с 09-00 до 21-00</span>
-                        <a class="footer-contacts-email" href="mailto:office@bosanoga.ru">office@bosanoga.ru</a>
+                        <a class="footer-contacts-email"
+                           href="mailto:office@bosanoga.ru">office@bosanoga.ru</a>
                         <div class="footer-social-links">
                             <div class="footer-social-link footer-social-link-twitter"></div>
                             <div class="footer-social-link footer-social-link-vk"></div>
@@ -160,17 +185,17 @@
                 </section>
             </div>
         </div>
-        </div>
+	    </div>
     </footer>
 
     <script>
         // TODO: replace it with React!
-        const searchEl = document.querySelector('[data-id=search-expander]');
-        const searchFormEl = document.querySelector('[data-id=search-form]');
+        const searchEl = document.querySelector('[data-id=search-expander]')
+        const searchFormEl = document.querySelector('[data-id=search-form]')
         searchEl.addEventListener('click', () => {
-            searchFormEl.classList.toggle('invisible');
-            searchFormEl.querySelector('input').focus();
-        });
+	        searchFormEl.classList.toggle('invisible')
+	        searchFormEl.querySelector('input').focus()
+        })
     </script>
 </body>
 
